# devtools-frontend

./: .clang-format  .devtools  .dockerignore  .env.template  .eslintignore  .eslintrc.js  .geminiignore  .git-blame-ignore-revs  .gitallowed  .gitattributes  .gitignore  .gitmodules  .gn  .mailmap  .npmignore  .npmrc  .style.yapf  .stylelintignore  .stylelintrc.json  ARCHITECTURE.md  AUTHORS  BUILD.gn  CODE_OF_CONDUCT.md  COMMON_OWNERS  CONTRIBUTING.md  DEPS  DESIGN_GUIDELINES.md  DIR_METADATA  ENG_REVIEW_OWNERS  INFRA_OWNERS  Inspector-1.1.json  LICENSE  LIGHTHOUSE_OWNERS  MODEL-CONFIGS.md  OWNERS  PRESUBMIT.py  README.md  SECURITY.md  WATCHLISTS  all_devtools_files.gni  (+34 more)
back_end/CXXDWARFSymbols/: .clang-tidy  CMakeLists.txt  OWNERS  README.md
build_overrides/: BUILDCONFIG.gn  build.gni
config/gni/: OWNERS  all_devtools_files.gni  all_devtools_modules.gni  devtools_grd_files.gni  devtools_image_files.gni  devtools_module_entrypoints.gni  i18n.gni
eval-server/python/: README.md  UV_COMMANDS.md  pyproject.toml  quick_test.py  requirements.txt  run.py  scripts.py  test_client.py
extensions/cxx_debugging/: CMakeLists.txt  README.md  tsconfig.json
front_end/: .eslintignore  .eslintrc.js  .jscsrc  BUILD.gn  OWNERS  README.md  Runtime.js  RuntimeInstantiator.js  Tests.js  application_color_tokens.css  application_tokens.css  audits2_worker.js  audits2_worker.json  audits_worker.js  audits_worker.json  design_system_tokens.css  design_tokens.css  devtools.js  devtools_app.html  devtools_app.js  devtools_app.json  devtools_compatibility.js  entrypoint_template.html  es6.js  externs.js  formatter_worker.js  formatter_worker.json  formatter_worker.unbundled.js  formatter_worker_entrypoint.js  formatter_worker_entrypoint.json  foundation_tests.txt  heap_snapshot_worker.js  heap_snapshot_worker.json  heap_snapshot_worker.unbundled.js  heap_snapshot_worker_entrypoint.js  heap_snapshot_worker_entrypoint.json  index.html  inspector.html  inspector.js  inspector.json  (+50 more)
front_end/Images/: BUILD.gn  Images.js  Images.prebundle.js  generate-css-vars.js  optimize_images-tsconfig.json  readme.md  rollup.config.js  rollup.config.mjs  whatsnew.avif
front_end/accessibility/: ARIAAttributesView.js  ARIAAttributesView.ts  ARIAConfig.js  ARIAMetadata.js  ARIAMetadata.ts  AXBreadcrumbsPane.js  AXBreadcrumbsPane.ts  AXTreePane.js  AccessibilityModel.js  AccessibilityNodeView.js  AccessibilityNodeView.ts  AccessibilitySidebarView.js  AccessibilitySidebarView.ts  AccessibilityStrings.js  AccessibilityStrings.ts  AccessibilitySubPane.js  AccessibilitySubPane.ts  BUILD.gn  OWNERS  SourceOrderView.js  SourceOrderView.ts  accessibility-legacy.js  accessibility-meta.ts  accessibility.js  accessibility.ts  accessibilityNode.css  accessibilityProperties.css  accessibility_strings.grdp  axBreadcrumbs.css  module.json
front_end/accessibility_test_runner/: AccessibilityPaneTestRunner.js  BUILD.gn  accessibility_test_runner.js  module.json
front_end/acorn/: acorn.js
front_end/animation/: AnimationControlPane.js  AnimationGroupPreviewUI.js  AnimationGroupPreviewUI.ts  AnimationModel.js  AnimationModel.ts  AnimationScreenshotPopover.js  AnimationScreenshotPopover.ts  AnimationTimeline.js  AnimationTimeline.ts  AnimationUI.js  AnimationUI.ts  BUILD.gn  ModuleUIStrings.js  ModuleUIStrings.ts  OWNERS  animation-legacy.js  animation-meta.ts  animation.js  animationScreenshotPopover.css  animationTimeline.css  animation_strings.grdp  module.json
front_end/application_test_runner/: AppcacheTestRunner.js  BUILD.gn  CacheStorageTestRunner.js  IndexedDBTestRunner.js  ResourceTreeTestRunner.js  ResourcesTestRunner.js  ServiceWorkersTestRunner.js  StorageTestRunner.js  application_test_runner.js  module.json
front_end/audits/: AuditCategories.js  AuditCategory.js  AuditController.js  AuditExtensionCategory.js  AuditFormatters.js  AuditLauncherView.js  AuditResultView.js  AuditRules.js  AuditsController.js  AuditsPanel.js  AuditsProtocolService.js  AuditsReportRenderer.js  AuditsReportSelector.js  AuditsStartView.js  AuditsStatusView.js  OWNERS  RadioSetting.js  auditResultTree.css  audits-legacy.js  audits.js  audits2_strings.grdp  auditsDialog.css  auditsPanel.css  auditsSidebarTree.css  auditsStartView.css  audits_strings.grdp  module.json
front_end/audits2/: Audits2Controller.js  Audits2Dialog.js  Audits2Panel.js  Audits2ProtocolService.js  Audits2ReportRenderer.js  Audits2ReportSelector.js  Audits2StartView.js  Audits2StatusView.js  RadioSetting.js  audits2Dialog.css  audits2Panel.css  audits2StartView.css  audits2Tree.css  module.json
front_end/audits2_test_runner/: Audits2TestRunner.js  module.json
front_end/audits2_worker/: Audits2Service.js  module.json
front_end/audits_test_runner/: AuditsTestRunner.js  module.json
front_end/audits_worker/: AuditsService.js  OWNERS  module.json
inspector_overlay/: .eslintrc.js  BUILD.gn  OWNERS  README.md  common.css  common.d.ts  common.js  common.js.map  common.test.ts  common.ts  css_grid_label_helpers.d.ts  css_grid_label_helpers.js  css_grid_label_helpers.js.map  css_grid_label_helpers.test.ts  css_grid_label_helpers.ts  drag_resize_handler.d.ts  drag_resize_handler.js  drag_resize_handler.js.map  drag_resize_handler.ts  highlight_common.d.ts  highlight_common.js  highlight_common.js.map  highlight_common.test.ts  highlight_common.ts  highlight_container_query.d.ts  highlight_container_query.js  highlight_container_query.js.map  highlight_container_query.ts  highlight_flex_common.d.ts  highlight_flex_common.js  highlight_flex_common.js.map  highlight_flex_common.test.ts  highlight_flex_common.ts  highlight_grid_common.d.ts  highlight_grid_common.js  highlight_grid_common.js.map  highlight_grid_common.test.ts  highlight_grid_common.ts  highlight_isolated_element.d.ts  highlight_isolated_element.js  (+73 more)
mcp/: BUILD.gn  HostBindings.ts  OWNERS  README.md  foundation_tests.txt  mcp.test.ts  mcp.ts  tsconfig.json
test/: .eslintrc.js  .gitignore  BUILD.gn  README.md  base-mocharc.js  build.js  karma.conf.js  navbar.md  run.ts  tsconfig.json  tsconfig.test.json
(+18171 files in other folders)
